[development] fixes overflow issue

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -797,7 +797,6 @@
       align-items: center;
       overflow: clip;
       img {
-        overflow: clip;
         width: 800px;
       }
     }
